<resources>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_loading_more">加载更多...</string>
    <string name="app_name">锦阔电竞</string>
    <string name="app_no_more_data">没有更多数据了</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bit_rate">bit_rate</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_name">我</string>
    <string name="close">Close</string>
    <string name="cube_views_load_more_click_to_load_more">点击加载更多</string>
    <string name="cube_views_load_more_error">加载失败,点击重试</string>
    <string name="cube_views_load_more_loaded_empty">数据为空</string>
    <string name="cube_views_load_more_loaded_no_more">全部数据加载完毕</string>
    <string name="cube_views_load_more_loading">加载中...</string>
    <string name="data_format_wrong">数据格式出错,请稍后再试</string>
    <string name="discuss_listview_footer_hint_all">已加载全部评论</string>
    <string name="discuss_listview_footer_hint_normal">查看更早的评论</string>
    <string name="exit">Exit</string>
    <string name="fail_loading">当前网络异常</string>
    <string name="fail_loading_btn">请点击重试</string>
    <string name="fail_loading_des">请检查你的手机是否联网</string>
    <string name="fgh_mask_bottom">Scroll to move handle</string>
    <string name="fgh_mask_top_pull">Pull To Break Out!</string>
    <string name="fgh_mask_top_release">Release To Break Out!</string>
    <string name="fgh_text_game_over">Game Over</string>
    <string name="fgh_text_loading">Refreshing…</string>
    <string name="fgh_text_loading_failed">Refreshing Failed</string>
    <string name="fgh_text_loading_finish">Refreshing Finished</string>
    <string name="fps">fps</string>
    <string name="get_data">正在获取数据...</string>
    <string name="gravity_center">center</string>
    <string name="gravity_left">left</string>
    <string name="gravity_right">right</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ijkplayer_dummy" />
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="live_gift_fireworks">%1$s送给%2$s一个流星雨，快点击进入房间开启橙币宝箱！</string>
    <string name="live_quote">你好！</string>
    <string name="live_room_msg_hint_for_broadcast_unopen">说点什么</string>
    <string name="live_room_msg_hint_for_danmu_opened">发送弹幕, %d钻石/条</string>
    <string name="live_send_danmu">说点什么吧~</string>
    <string name="live_visitor">游客昵称</string>
    <string name="load_cost">load-cost</string>
    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="loading">加载中...</string>
    <string name="loading_text">loading</string>
    <string name="login_failed">Login failed</string>
    <string name="login_title">Hi~欢迎来到锦阔电竞</string>
    <string name="media_information">Media Information</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_language">Language</string>
    <string name="mi_length">Length</string>
    <string name="mi_media">Media</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_player">Player</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="open_gps">无法获取你的位置信息。请到手机系统的[设置]->[隐私]->[定位服务]中打开定位服务，并允许初见使用定位服务。</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="prompt_email">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="pull_to_refresh_pull">下拉加载更多</string>
    <string name="recent">Recent</string>
    <string name="register_2_tips">我们已发送验证码到短信到+86%1$s</string>
    <string name="sample">Sample</string>
    <string name="search_menu_title">Search</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="select_picture_cancel">取消</string>
    <string name="select_picture_photograph">拍照</string>
    <string name="select_picture_select_from_album">从相册选择</string>
    <string name="send_message">发送</string>
    <string name="settings">Settings</string>
    <string name="show_info">Info</string>
    <string name="srl_component_falsify" formatted="false">"%s falsify area,
 Represents the height[%.1fdp] of drag at run time,
 It does not show anything."</string>
    <string name="srl_content_empty">The content view in SmartRefreshLayout is empty. Do you forget to add it in xml layout file?</string>
    <string name="srl_footer_failed">Load Failed</string>
    <string name="srl_footer_finish">Load Success</string>
    <string name="srl_footer_loading">Loading…</string>
    <string name="srl_footer_nothing">No More Data</string>
    <string name="srl_footer_pulling">Pull Up To Load More</string>
    <string name="srl_footer_refreshing">Refreshing…</string>
    <string name="srl_footer_release">Release To Load More</string>
    <string name="srl_header_failed">Refresh Failed</string>
    <string name="srl_header_finish">Refresh Success</string>
    <string name="srl_header_loading">Loading…</string>
    <string name="srl_header_pulling">Pull Down To Refresh</string>
    <string name="srl_header_refreshing">Refreshing…</string>
    <string name="srl_header_release">Release To Refresh</string>
    <string name="str_add_team">你还没有加入战队哦</string>
    <string name="str_add_team_instructions">"通过战队玩法，您可以获取更多的奖励，
 快来加入吧！"</string>
    <string name="str_comit">提交</string>
    <string name="str_login_code">获取短信验证码</string>
    <string name="str_login_ok">登录及代表你已同意</string>
    <string name="str_login_xy">《注册协议》</string>
    <string name="str_my_add">我要加入</string>
    <string name="str_new_team">创建战队</string>
    <string name="str_password_login">手机密码登录</string>
    <string name="str_reg_remind">未注册的手机号将自动创建JK账号</string>
    <string name="str_request_team_name">请输入战队名称</string>
    <string name="str_team_details_info">请填写申请战队的备注信息</string>
    <string name="str_team_header">战队图像*</string>
    <string name="str_team_interdution">战队简介</string>
    <string name="str_team_interdution_name">工作日内未接受审核，视为不通过，可再次发起战队 申请如果队长10个工作日内未接受审核，视为不通 过,可再次发起战队申请</string>
    <string name="str_team_members_header">成员头像</string>
    <string name="str_team_members_identity">成员身份</string>
    <string name="str_team_members_nikeName">成员昵称</string>
    <string name="str_team_members_operation">操作</string>
    <string name="str_team_name">战队名称*</string>
    <string name="str_team_wait">信息正在审核中，请耐心等待...</string>
    <string name="str_upload_pic">上传图片</string>
    <string name="str_upload_pic_set">JPG或者PNG格式，最大1M</string>
</resources>