<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:layout_marginRight="@dimen/dp_15"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/color_666" android:gravity="center" android:id="@+id/tv_team_members_header" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_team_members_header" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/color_666" android:gravity="center" android:id="@+id/tv_team_members_nikeName" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_team_members_nikeName" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/color_666" android:gravity="center" android:id="@+id/tv_team_members_identity" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_team_members_identity" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/color_666" android:gravity="center" android:id="@+id/tv_team_members_operation" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_team_members_operation" android:layout_weight="1.0" />
</LinearLayout>