<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_20" android:layout_marginRight="@dimen/dp_15"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@+id/iv_login_close" android:layout_width="@dimen/dp_12" android:layout_height="@dimen/dp_12" android:src="@mipmap/icon_close" />
    <ImageView android:id="@+id/iv_login_iv" android:layout_width="@dimen/dp_34" android:layout_height="@dimen/dp_34" android:layout_marginTop="@dimen/dp_33" android:src="@mipmap/icon_iv_logo" />
    <TextView android:textSize="@dimen/sp_24" android:textColor="@color/blackColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_13" android:text="@string/login_title" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_46" android:layout_marginBottom="@dimen/dp_12">
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/blackColor" android:id="@+id/tv_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_14" android:text="+86 " android:drawableRight="@drawable/icon_arrow_down" />
        <EditText android:textSize="@dimen/sp_18" android:textColor="@color/blackColor" android:textColorHint="@color/color_999" android:id="@+id/et_phone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/prompt_email" android:selectAllOnFocus="true" android:inputType="phone" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <include android:layout_width="fill_parent" android:layout_height="@dimen/qb_px_2" layout="@layout/line" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/color_666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_4" android:text="@string/str_reg_remind" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_login_code" android:background="@drawable/bg_red_btn" android:layout_width="fill_parent" android:layout_height="@dimen/dp_50" android:layout_marginTop="@dimen/dp_21" android:text="@string/str_login_code" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/color_666" android:layout_gravity="center" android:id="@+id/tv_phone_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_password_login" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/dp_16">
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_gravity="bottom" android:id="@+id/iv_login_qq" android:layout_width="@dimen/dp_30" android:layout_height="@dimen/dp_30" android:src="@mipmap/icon_login_qq" />
            <ImageView android:layout_gravity="bottom" android:id="@+id/iv_login_weixin" android:layout_width="@dimen/dp_30" android:layout_height="@dimen/dp_30" android:layout_marginLeft="@dimen/dp_40" android:src="@mipmap/icon_login_weixin" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25">
            <ImageView android:id="@+id/iv_ok" android:layout_width="@dimen/dp_15" android:layout_height="@dimen/dp_15" android:src="@mipmap/icon_ok" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_1" android:text="@string/str_login_ok" />
            <TextView android:textSize="12.0sp" android:textColor="@color/tabSelectTextColor" android:id="@+id/tv_login_ok" android:layout_width="73.0dip" android:layout_height="17.0dip" android:text="@string/str_login_xy" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>