<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/color_F1F5F8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:fresco="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/titlebar_title_layout" />
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_team_form" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dp_375">
        <RelativeLayout android:orientation="vertical" android:background="@drawable/team_white_bg" android:paddingLeft="@dimen/dp_15" android:paddingRight="@dimen/dp_15" android:layout_width="fill_parent" android:layout_height="@dimen/dp_375" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_15">
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_666" android:paddingTop="@dimen/dp_39" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_team_header" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_30" android:layout_centerHorizontal="true">
                <com.facebook.drawee.view.SimpleDraweeView android:layout_gravity="center" android:id="@+id/sdv_left_header" android:layout_width="@dimen/dp_60" android:layout_height="@dimen/dp_60" android:scaleType="fitXY" fresco:actualImageScaleType="centerCrop" fresco:fadeDuration="300" fresco:placeholderImage="@mipmap/app_default_middle" fresco:placeholderImageScaleType="centerCrop" fresco:roundAsCircle="true" />
                <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_upload_pic" android:background="@drawable/bg_red_btn" android:layout_width="@dimen/dp_69" android:layout_height="@dimen/dp_21" android:layout_marginTop="@dimen/dp_12" android:text="@string/str_upload_pic" />
                <TextView android:textSize="@dimen/sp_10" android:textColor="@color/color_666" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/str_upload_pic_set" />
                <TextView android:textSize="@dimen/sp_10" android:textColor="@color/color_666" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_team_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_53" android:text="@string/str_upload_pic_set" />
            </LinearLayout>
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_666" android:id="@+id/tv_team_tt" android:paddingTop="@dimen/dp_39" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_team_name" android:layout_centerVertical="true" />
            <include android:id="@+id/line" android:layout_width="fill_parent" android:layout_height="@dimen/qb_px_2" android:layout_marginBottom="-8.0dip" android:layout_alignBottom="@id/tv_team_tt" layout="@layout/line" />
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_666" android:id="@+id/tv_team_int" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:layout_marginBottom="-30.0dip" android:text="@string/str_team_interdution" android:layout_alignBottom="@id/line" />
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_666" android:id="@+id/tv_int" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:layout_marginBottom="-80.0dip" android:text="@string/str_team_interdution_name" android:layout_alignBottom="@id/tv_team_int" />
            <TextView android:textSize="@dimen/sp_13" android:textColor="@color/color_666" android:id="@+id/tv_count" android:layout_width="34.0dip" android:layout_height="18.0dip" android:layout_marginTop="@dimen/dp_16" android:layout_marginBottom="-100.0dip" android:text="0/60" android:layout_alignBottom="@id/tv_team_int" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/ll_wait_audit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/dp_176" android:layout_height="@dimen/dp_176" android:src="@mipmap/icon_team_wait_audit" />
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/tabSelectTextColor" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_19" android:layout_marginBottom="@dimen/dp_60" android:text="@string/str_team_wait" />
    </LinearLayout>
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_team_commit" android:background="@drawable/bg_red_btn" android:layout_width="@dimen/dp_223" android:layout_height="@dimen/dp_50" android:layout_marginTop="@dimen/dp_21" android:text="@string/str_comit" />
</LinearLayout>