<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_network_no_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_layout_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/icon_fail_loading" />

    <TextView
        android:id="@+id/network_no_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/fail_loading"
        android:textColor="@color/color_666"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/network_no_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:text="@string/fail_loading_des"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/sp_14" />

    <Button
        android:id="@+id/btn_network_no_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:enabled="true"
        android:singleLine="true"
        android:text="@string/fail_loading_btn"
        android:textColor="@color/color_D83FDD"
        android:textSize="@dimen/sp_12" />
</LinearLayout>