<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_F1F5F8"
    android:orientation="vertical">

    <include layout="@layout/titlebar_title_layout" />

    <LinearLayout
        android:id="@+id/ll_team_form"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_375"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_375"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/team_white_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_39"
                android:text="@string/str_team_header"
                android:textColor="@color/color_666"
                android:textSize="@dimen/sp_16" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_30"
                android:orientation="vertical">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_left_header"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    fresco:actualImageScaleType="centerCrop"
                    fresco:fadeDuration="300"
                    fresco:placeholderImage="@mipmap/app_default_middle"
                    fresco:placeholderImageScaleType="centerCrop"
                    fresco:roundAsCircle="true" />

                <TextView
                    android:id="@+id/tv_upload_pic"
                    android:layout_width="@dimen/dp_69"
                    android:layout_height="@dimen/dp_21"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/bg_red_btn"
                    android:gravity="center"
                    android:text="@string/str_upload_pic"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_12"
                    android:gravity="center"
                    android:text="@string/str_upload_pic_set"
                    android:textColor="@color/color_666"
                    android:textSize="@dimen/sp_10" />

                <EditText
                    android:id="@+id/et_team_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_50"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/str_request_team_name"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/color_666"
                    android:textSize="@dimen/sp_10" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_team_tt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingTop="@dimen/dp_39"
                android:text="@string/str_team_name"
                android:textColor="@color/color_666"
                android:textSize="@dimen/sp_16" />

            <include
                android:id="@+id/line"
                layout="@layout/line"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/qb_px_2"
                android:layout_below="@id/tv_team_tt"
                android:layout_marginBottom="-8.0dip" />

            <TextView
                android:id="@+id/tv_team_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/line"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="-30.0dip"
                android:text="@string/str_team_interdution"
                android:textColor="@color/color_666"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/et_int"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_team_int"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="-100.0dip"
                android:background="@drawable/bg_white_round_btn"
                android:hint="@string/str_team_details_info"
                android:maxLength="61"
                android:minLines="4"
                android:textColor="#ff666666"
                android:textSize="16.0sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="18.0dip"
                android:layout_alignBottom="@id/tv_team_int"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="-100.0dip"
                android:text="0/60"
                android:textColor="@color/color_666"
                android:textSize="@dimen/sp_13" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_team_commit"
        android:layout_width="@dimen/dp_223"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_27"
        android:background="@drawable/bg_red_btn"
        android:gravity="center"
        android:text="@string/str_comit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />
</LinearLayout>