<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:fresco="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/titlebar_title_layout" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/ll_wait_audit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/dp_176" android:layout_height="@dimen/dp_176" android:src="@mipmap/icon_team_wait_audit" />
        <TextView android:textSize="@dimen/sp_20" android:textColor="@color/tabSelectTextColor" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_team_wiat_name1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_15" android:text="@string/str_add_team" />
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_999" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_team_wiat_name2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_add_team_instructions" />
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_999" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_team_wiat_name3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_add_team_instructions" />
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_999" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_team_wiat_name4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_add_team_instructions" />
    </LinearLayout>
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_team_commit" android:background="@drawable/bg_red_btn" android:layout_width="@dimen/dp_223" android:layout_height="@dimen/dp_40" android:layout_marginTop="@dimen/dp_29" android:text="@string/str_my_add" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/tabSelectTextColor" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_new_team" android:background="@drawable/bg_white_btn" android:layout_width="@dimen/dp_223" android:layout_height="@dimen/dp_40" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_new_team" />
</LinearLayout>